<resources>
    <string name="app_name">BLives</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <string name="item_main_text">首页</string>
    <string name="item_scenery_text">校园风光</string>
    <string name="item_campus_text">校园活动</string>
    <string name="item_map_text">走进校园</string>
    <string name="item_other_text">其它</string>
    <string name="item_app_text">校园应用</string>
    <string name="item_setting_text">设置与帮助</string>


    <string name="item_notification_text">消息</string>
    <string name="iv_show_img_text">暂无缩略图</string>
    <string name="test_tv_title_text">我是一则标题</string>
    <string name="test_tv_content_text">今天天气真好，风和日丽，鸟语花香.....</string>
    <string name="test_tv_date_text">2016-02-27</string>
    <string name="edt_user_text">你的邮箱</string>
    <string name="edt_pass_text">你的密码</string>
    <string name="btn_regist_text">注册</string>
    <string name="btn_login_text">登陆</string>
    <string name="item_forget_text">忘记密码？</string>
    <string name="edt_email_text">你的邮箱</string>
    <string name="edt_username_text">你的姓名</string>
    <string name="edt_depart_text">你的系院</string>
    <string name="edt_tel_text">你的手机号</string>
    <string name="edt_feedback_text">你的反馈</string>
    <string name="edt_nick_text">你的昵称</string>
    <string name="btn_reset_text">找回密码</string>
    <string name="tv_label_name">姓名</string>
    <string name="tv_label_email">邮箱</string>
    <string name="tv_label_tel">手机号</string>
    <string name="btn_sms_text">消息推送</string>
    <string name="btn_trash_text">清除缓存</string>
    <string name="btn_update_text">检测新版本</string>
    <string name="btn_help_text">我要帮助</string>
    <string name="btn_about_text">关于我们</string>
    <string name="btn_exit_text">退出登录</string>
    <string name="tv_popview_test_text">测试</string>



    <string name="tv_about_author_text">关于作者</string>
    <string name="tv_version_number">1.0</string>
    <string name="tv_about_me_text">https://github.com/monsterLin</string>
    <string name="tv_main_web_text">项目主页</string>
    <string name="tv_web_text">https://github.com/binzhouuniversity</string>
    <string name="tv_tips">免责声明</string>
    <string name="tv_version_text">当前版本</string>
    <string name="tv_mz_text_one">Copyright @ 2015 BLives All Rights Reserved</string>
    <string name="tv_mz_text_two">Power by BLives</string>
    <string name="tv_campus_tips_text">发布须知：发布水贴和告白帖管理员必删，发布不良信息的用户经核实将进行删号处理</string>
    <string name="tv_title_text">滨州学院是一所省属全日制综合性普通本科院校</string>
    <string name="tv_nick_text">滨州学院</string>
    <string name="tv_date_text">2016-04-25 10:17</string>
    <string name="edt_campus_title">活动主题</string>
    <string name="edt_campus_content">活动内容</string>
    <string name="edt_campus_date">活动时间</string>
    <string name="edt_campus_place">活动地点</string>
    <string name="edt_campus_object">活动对象</string>
    <string name="edt_campus_type">活动类型</string>
    <string name="btn_public_text">发布</string>
    <string name="tv_thanks">特别鸣谢</string>
    <string name="tv_thanks_ui">UI支持：@磁力链接君(weibo)     ||       @柠木 ⚜</string>
    <string name="tv_thanks_code">技术支持：@蓝默      ||      @全世界Coder</string>
    <string name="tv_nick_tip_text">点击头像登陆</string>
    <string name="tv_pass_tips">提示：密码长度需大于6位，且不能为汉字</string>
    <string name="tv_load_campus_detail">加载中...</string>
    <string name="send_to">分享</string>
    <string name="item_location_text">定位</string>
    <string name="item_share_text">分享</string>
    <string name="item_tel_test">电话</string>
    <string name="btn_sms_code">获取验证码</string>
    <string name="edt_SmsCode_text">验证码</string>
    <string name="item_changepass_text">更改密码</string>
    <string name="edt_oldPass_text">请输入旧密码</string>
    <string name="edt_newPass_text">请输入新密码</string>
    <string name="edt_reNewPass_text">请再次输入新密码</string>

</resources>
