<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_main"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/item_main_text" />
        <item
            android:id="@+id/item_scenery"
            android:icon="@drawable/ic_menu_scenery"
            android:title="@string/item_scenery_text" />
        <item
            android:id="@+id/item_campus"
            android:icon="@drawable/ic_menu_campus"
            android:title="@string/item_campus_text" />
        <item
            android:id="@+id/item_app"
            android:icon="@drawable/ic_menu_app"
            android:title="@string/item_app_text" />
    </group>


    <item android:title="@string/item_other_text">
        <menu>
            <item
                android:id="@+id/item_map"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/item_map_text" />
            <item
                android:id="@+id/item_setting"
                android:checked="false"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/item_setting_text" />
        </menu>
    </item>

</menu>