<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edt_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/edt_tel_text" />

        <Button
            android:id="@+id/btn_getSmsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/btn_sms_code" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_SmsCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_SmsCode_text"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_pass_text"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_regist_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_shape"/>

</LinearLayout>