<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@drawable/ic_campus_theme"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:hint="@string/edt_campus_title"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@drawable/ic_campus_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:hint="@string/edt_campus_content"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@drawable/ic_campus_date"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:hint="@string/edt_campus_date"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@drawable/ic_campus_theme"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:hint="@string/edt_campus_place"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@drawable/ic_campus_object"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:hint="@string/edt_campus_object"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@drawable/ic_campus_type"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:hint="@string/edt_campus_type"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:text="★：活动发布后不可删除和修改，请认真填写，如需更改，请联系管理员"/>
    <Button
        android:id="@+id/btn_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_public_text"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_shape"
        android:layout_margin="15dp"
        android:layout_weight="1"/>


</LinearLayout>

</ScrollView>