<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/borrow"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_bzu"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_login_username"
        android:drawablePadding="20dp"
        android:hint="@string/edt_user_text"
        android:inputType="text"
        android:layout_below="@id/iv_logo"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_login_password"
        android:hint="@string/edt_pass_text"
        android:layout_below="@id/edt_mail"
        android:inputType="textPassword"
        android:drawablePadding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_pass"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_regist_text"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/btn_regist_shape"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_text"
                android:textColor="@color/black"
                android:background="@drawable/btn_login_shape"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>

        </LinearLayout>




    <LinearLayout
        android:id="@+id/ll_third_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/iv_qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bn_qq_login"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"/>


        <ImageView
            android:id="@+id/iv_wx_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bn_wx_login"
            android:layout_weight="1"/>


        <ImageView
            android:id="@+id/iv_sina_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bn_sina_login"
            android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/ll_third_login"
        android:background="@color/blue"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</RelativeLayout>